; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_subr.c_bhnd_bus_generic_sr_register_provider.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_subr.c_bhnd_bus_generic_sr_register_provider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_service_registry = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"NULL service registry\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bhnd_bus_generic_sr_register_provider(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.bhnd_service_registry*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.bhnd_service_registry* @BHND_BUS_GET_SERVICE_REGISTRY(i32 %10, i32 %11)
  store %struct.bhnd_service_registry* %12, %struct.bhnd_service_registry** %9, align 8
  %13 = load %struct.bhnd_service_registry*, %struct.bhnd_service_registry** %9, align 8
  %14 = icmp ne %struct.bhnd_service_registry* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @KASSERT(i32 %15, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.bhnd_service_registry*, %struct.bhnd_service_registry** %9, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @bhnd_service_registry_add(%struct.bhnd_service_registry* %17, i32 %18, i32 %19, i32 0)
  ret i32 %20
}

declare dso_local %struct.bhnd_service_registry* @BHND_BUS_GET_SERVICE_REGISTRY(i32, i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @bhnd_service_registry_add(%struct.bhnd_service_registry*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
